force-app/main/default/objects/Invoice__c/fields/Driver_Name__c.field-meta.xml
<CustomField>
    <fullName>Driver_Name__c</fullName>
    <formula>Ride_Invoice__r.Driver__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Name</label>
    <type>Text</type>
</CustomField>