force-app/main/default/objects/Invoice__c/fields/Drop__c.field-meta.xml
<CustomField>
    <fullName>Drop__c</fullName>
    <formula>Ride_Invoice__r.Drop__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drop</label>
    <type>Text</type>
</CustomField>