force-app/main/default/objects/Invoice__c/fields/Mode_of_Payment__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Payment__c</fullName>
    <formula>TEXT( Ride_Invoice__r.Mode_of_Payment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode of Payment</label>
    <type>Text</type>
</CustomField>