force-app/main/default/objects/Invoice__c/fields/Pick_Up__c.field-meta.xml
<CustomField>
    <fullName>Pick_Up__c</fullName>
    <formula>Ride_Invoice__r.Pick_Up__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pick Up</label>
    <type>Text</type>
</CustomField>