force-app/main/default/objects/Invoice__c/fields/Ride_ID__c.field-meta.xml
<CustomField>
    <fullName>Ride_ID__c</fullName>
    <label>Ride_ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>