force-app/main/default/objects/Invoice__c/fields/Ride_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Ride_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ride_Invoice</label>
    <referenceTo>Ride__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>