force-app/main/default/objects/Invoice__c/fields/Ride_Mode__c.field-meta.xml
<CustomField>
    <fullName>Ride_Mode__c</fullName>
    <formula>TEXT( Ride_Invoice__r.Vehicle_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ride Mode</label>
    <type>Text</type>
</CustomField>